[gd_scene load_steps=19 format=3 uid="uid://b4wc4a2l43ne4"]

[ext_resource type="Script" uid="uid://chtl6kx1hh3r6" path="res://scenes/shoot bugs/player_bugs.gd" id="1_8sbc7"]
[ext_resource type="Texture2D" uid="uid://bkev73orr3pf1" path="res://scenes/SpaceInvaders/Drone.png" id="2_wnpfs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2d81t"]
atlas = ExtResource("2_wnpfs")
region = Rect2(0, 384, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjwms"]
atlas = ExtResource("2_wnpfs")
region = Rect2(96, 384, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x50ns"]
atlas = ExtResource("2_wnpfs")
region = Rect2(192, 384, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tjeb"]
atlas = ExtResource("2_wnpfs")
region = Rect2(288, 384, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh8h6"]
atlas = ExtResource("2_wnpfs")
region = Rect2(384, 384, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6ah3"]
atlas = ExtResource("2_wnpfs")
region = Rect2(480, 384, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdscx"]
atlas = ExtResource("2_wnpfs")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnxou"]
atlas = ExtResource("2_wnpfs")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_515dp"]
atlas = ExtResource("2_wnpfs")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_urivk"]
atlas = ExtResource("2_wnpfs")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_unhsg"]
atlas = ExtResource("2_wnpfs")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_38oh4"]
atlas = ExtResource("2_wnpfs")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctr45"]
atlas = ExtResource("2_wnpfs")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejuer"]
atlas = ExtResource("2_wnpfs")
region = Rect2(672, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_aoryn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d81t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjwms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x50ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tjeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh8h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6ah3")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdscx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnxou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_515dp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urivk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unhsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38oh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctr45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejuer")
}],
"loop": false,
"name": &"shoot",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mqw3m"]
radius = 25.0

[node name="Player_bugs" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_8sbc7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_aoryn")
animation = &"shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_mqw3m")

[node name="cooldown_timer" type="Timer" parent="."]

[node name="laserSpawnPoint" type="Node2D" parent="."]
position = Vector2(59, 0)

[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
